--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - Kokoa clone</title>
+    <title>Settings - Kokoa clone</title>
 </head>
 <body>
     <div class="status-bar">       
@@ -22,34 +22,6 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="far fa-comment-dots fa-lg"></i></span>
-            <span><i class="fas fa-music fa-lg"></i></span>
-            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
-            <span class = screen-header__icons-reddot></span>
-        </div>
-    </header>
-
-    <main class="main-screen">
-        <div class="user-conponent">
-            <div class="user-component__column">
-                <img  src ="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar" />
-                <div class="user-component__text">
-                    <h4 class="user-component__title">Nicolas</h4>
-                    <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
-                </div>
-            </div>
-            <div class="user-component__column">
-                <span>21:22</span>
-                <div class="badge">1</div>
-            </div>
-        </div>    
-    </main>
-
-
 
 
     <nav class="nav">
@@ -62,7 +34,7 @@
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="fas fa-comment fa-2x"></i>
+                    <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
             
