Kokoa Clone Update 201201

--- a/chats.html
+++ b/chats.html
@@ -34,6 +34,7 @@
     </header>
 
     <main class="main-screen">
+        <a href="chat.html">
         <div class="user-conponent">
             <div class="user-component__column">
                 <img  src ="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar" />
@@ -47,6 +48,7 @@
                 <div class="badge">1</div>
             </div>
         </div>    
+        </a>  
     </main>
 
 
