--- a/more.html
+++ b/more.html
@@ -38,7 +38,7 @@
                 <img  src ="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">Nicolas</h4>
-                    <h6 class="user-component__subtitle">+ 787 666 999<i class="fas fa-exclamation"></i></h6>
+                    <h6 class="user-component__subtitle">+ 787 666 999<i class="fas fa-info-circle"></i></h6>
                 </div>
             </div>
             <div class="user-component__column">
