--- a/settings.html
+++ b/settings.html
@@ -22,13 +22,52 @@
         </div>
     </div>
 
+    <header class="alt-header">
+        <dv class="alt-header__column">
+          <a href="more.html">
+            <i class="fas fa-angle-left fa-3x"></i>
+          </a>
+        </dv>
+        <dv class="alt-header__column">
+            <h1 class="alt-header__title">Settings</h1>
+        </dv>
+        <dv class="alt-header__column">
+            <i class="fas fa-search fa-2x"></i>
+        </dv>
+    </header>
+
+    <main class="main-screen">
+        <ul class="settings-list">
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-bullhorn"></i>
+                    <span>Notices</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-flask"></i>
+                    <span>Kokoa Lab</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-info-circle"></i>
+                    <span>Version</span>
+                </div>
+                <div class="settings__setting-column">Latest Version</div>
+            </li>
+        </ul>
+    </main>
 
 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="far fa-user fa-2x"></i></i>
+                    <i class="far fa-user fa-3x"></i></i>
                 </a>
             </li>           
             <li class="nav__btn">
