--- a/friends.html
+++ b/friends.html
@@ -98,6 +98,9 @@
             </li>
         </ul>
     </nav>
+    <div id="splash-screen">
+        <i class="fas fa-comment "></i>
+    </div>
 
     <script 
     src="https://kit.fontawesome.com/5b8407bd96.js" 
