--- a/find.html
+++ b/find.html
@@ -75,7 +75,9 @@
             <div class="open-post__column">
                <div class="open-post__photo">
                 <img src="https://avatars3.githubusercontent.com/u/3612017" />
-                <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i> <span>326</span></div>
+                <div class="open-post__heart-count"
+                ><i class="fas fa-heart fa-xs"></i> 
+                <span>326</span></div>
                </div>
             </div>
         </div>
@@ -110,6 +112,10 @@
             </li>
         </ul>
     </nav>
+
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <script 
     src="https://kit.fontawesome.com/5b8407bd96.js" 
