--- a/friends.html
+++ b/friends.html
@@ -102,6 +102,10 @@
         <i class="fas fa-comment "></i>
     </div>
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script 
     src="https://kit.fontawesome.com/5b8407bd96.js" 
     crossorigin="anonymous"
