--- a/more.html
+++ b/more.html
@@ -112,6 +112,10 @@
         </ul>
     </nav>
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script 
     src="https://kit.fontawesome.com/5b8407bd96.js" 
     crossorigin="anonymous"
